# dirt-build

./: .travis.yml  Cargo.toml  LICENSE.md  README.md
examples/: commit.rs
examples/build-script/: Cargo.toml  build.rs
examples/build-script/src/: main.rs
src/: lib.rs
